# cruxe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  cliff.toml  dist-workspace.toml  dist.toml
.github/scripts/: check_conventional_commit_msg.sh  check_openspec_trace_gate.sh
.github/workflows/: ci.yml  homebrew-update.yml  openspec-trace-gate.yml  pr-title.yml  release-e2e.yml  release.yml  security.yml
Formula/: codecompass.rb  cruxe.rb
benchmarks/retrieval/: README.md  baseline.v1.json  gate-policy.v1.json  query-pack.v1.json  run_retrieval_gate.sh
benchmarks/semantic/: README.md  adaptive-ambiguous-fixtures.v1.json  adaptive-router-fixtures.v1.json  fixtures.lock.json  query-pack.v1.json  run_semantic_benchmarks.sh
configs/: cruxeignore.example  default.toml
configs/mcp/: claude-code.json  codex.json  cursor.json  generic.json  tool-schemas.json
configs/policy/: audit-only-oss.toml  balanced-product.toml  strict-enterprise.toml
crates/codecompass-cli/: Cargo.toml
crates/codecompass-cli/src/: main.rs
crates/codecompass-cli/src/commands/: index.rs  prune_overlays.rs  search.rs  serve_mcp.rs  state_export.rs  state_import.rs
crates/codecompass-cli/tests/: integration_test.rs
crates/codecompass-core/: Cargo.toml
crates/codecompass-core/src/: cache.rs  config.rs  error.rs  ids.rs  lib.rs  types.rs  vcs_adapter.rs
crates/codecompass-indexer/: Cargo.toml
crates/codecompass-indexer/src/: call_extract.rs  embed_writer.rs  import_extract.rs  lib.rs  overlay.rs  staging.rs  sync_incremental.rs  writer.rs
crates/codecompass-indexer/src/languages/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/codecompass-mcp/: Cargo.toml
crates/codecompass-mcp/src/: http.rs  index_launcher.rs  lib.rs  notifications.rs  protocol.rs  server.rs  workspace_router.rs
crates/codecompass-mcp/src/server/: tests.rs  tool_calls.rs
crates/codecompass-mcp/src/server/tool_calls/: context.rs  health.rs  index.rs  query.rs  refs.rs  shared.rs  status.rs  structure.rs
crates/codecompass-mcp/src/tools/: compare_symbol_between_commits.rs  diff_context.rs  find_references.rs  find_related_symbols.rs  get_call_graph.rs  get_code_context.rs  get_file_outline.rs  get_symbol_hierarchy.rs  health_check.rs  index_repo.rs  index_status.rs  list_refs.rs  locate_symbol.rs  mod.rs  search_code.rs  suggest_followup_queries.rs  switch_ref.rs  sync_repo.rs
crates/codecompass-query/: Cargo.toml
crates/codecompass-query/examples/: semantic_benchmark_eval.rs
crates/codecompass-query/src/: call_graph.rs  confidence.rs  context.rs  detail.rs  diff_context.rs  explain_ranking.rs  find_references.rs  followup.rs  freshness.rs  hierarchy.rs  hybrid.rs  intent.rs  lib.rs  locate.rs  overlay_merge.rs  ranking.rs  related.rs  rerank.rs  scoring.rs  search.rs  semantic_advisor.rs  symbol_compare.rs  tombstone.rs  vcs_e2e.rs
crates/codecompass-query/tests/: semantic_hybrid_integration.rs  semantic_phase8_benchmarks.rs
crates/codecompass-state/: Cargo.toml
crates/codecompass-state/src/: branch_state.rs  db.rs  edges.rs  embedding.rs  export.rs  import.rs  jobs.rs  lib.rs  maintenance_lock.rs  overlay_paths.rs  project.rs  schema.rs  symbols.rs  tantivy_index.rs  tombstones.rs  vector_index.rs  workspace.rs  worktree_leases.rs
crates/codecompass-state/src/vector_index/: lancedb_backend.rs
crates/codecompass-vcs/: Cargo.toml
crates/codecompass-vcs/src/: adapter.rs  diff.rs  git2_adapter.rs  worktree.rs
crates/cruxe-cli/: Cargo.toml
crates/cruxe-cli/src/: main.rs
crates/cruxe-cli/src/commands/: doctor.rs  eval.rs  index.rs  init.rs  mod.rs  prune_overlays.rs  search.rs  serve_mcp.rs  state_export.rs  state_import.rs
crates/cruxe-cli/tests/: integration_test.rs
crates/cruxe-core/: Cargo.toml
crates/cruxe-indexer/: Cargo.toml
crates/cruxe-indexer/src/: call_extract.rs  centrality.rs  embed_writer.rs  import_extract.rs  language_grammars.rs  lib.rs  overlay.rs  parser.rs  prepare.rs  scanner.rs  snippet_extract.rs  staging.rs  symbol_extract.rs  sync_incremental.rs  writer.rs
crates/cruxe-indexer/src/languages/: enricher.rs  enricher_go.rs  enricher_python.rs  enricher_rust.rs  enricher_typescript.rs  generic_mapper.rs  go.rs  mod.rs  python.rs  rust.rs  tag_extract.rs  tag_registry.rs  text.rs  typescript.rs
crates/cruxe-mcp/: Cargo.toml
crates/cruxe-mcp/src/: http.rs  index_launcher.rs  protocol.rs  server.rs  workspace_router.rs
crates/cruxe-mcp/src/server/: tests.rs  tool_calls.rs
crates/cruxe-mcp/src/server/tool_calls/: context.rs  health.rs  index.rs  query.rs  refs.rs  shared.rs  status.rs  structure.rs
crates/cruxe-mcp/src/tools/: build_context_pack.rs  explain_ranking.rs  find_references.rs  get_code_context.rs  get_symbol_hierarchy.rs  health_check.rs  locate_symbol.rs  mod.rs  search_code.rs  suggest_followup_queries.rs
crates/cruxe-query/: Cargo.toml
crates/cruxe-query/examples/: policy_eval_gate.rs  ranking_budget_eval.rs  semantic_benchmark_eval.rs
crates/cruxe-query/src/: adaptive_plan.rs  call_graph.rs  confidence.rs  context.rs  context_pack.rs  detail.rs  diff_context.rs  explain_ranking.rs  find_references.rs  freshness.rs  hierarchy.rs  hybrid.rs  intent.rs  lib.rs  locate.rs  overlay_merge.rs  planner.rs  policy.rs  ranking.rs  related.rs  rerank.rs  retrieval_eval.rs  search.rs  semantic_advisor.rs  symbol_compare.rs  tombstone.rs  vcs_e2e.rs
crates/cruxe-query/src/context_pack/: sectioning.rs
crates/cruxe-query/tests/: adaptive_query_plan_router_fixtures.rs  retrieval_eval_gate.rs  retrieval_suite_pack.rs  semantic_benchmark_harness.rs  semantic_hybrid_integration.rs  semantic_phase8_benchmarks.rs  semantic_query_pack.rs
crates/cruxe-state/: Cargo.toml
crates/cruxe-vcs/: Cargo.toml
crates/cruxe-vcs/src/: adapter.rs  git2_adapter.rs  lib.rs  worktree.rs
docs/: ranking-budget-tuning.md
docs/guides/: adaptive-query-plan.md  auto-indexing.md  claude-code.md  codex.md  copilot.md  (+4 more)
scripts/: generate_mcp_tool_schemas.sh  ranking_budget_diff_report.py
tests/: test_auto_indexing_hook_templates.sh
(+344 files in other folders)
