[workspace]
members = [
    "crates/cruxe-cli",
    "crates/cruxe-core",
    "crates/cruxe-state",
    "crates/cruxe-indexer",
    "crates/cruxe-query",
    "crates/cruxe-mcp",
    "crates/cruxe-vcs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/signalridge/cruxe"

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
blake3 = "1.8"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
anyhow = "1.0"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
globset = "0.4"
tempfile = "3"
git2 = { version = "0.19", default-features = false }
rayon = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
fastembed = { version = "5.11", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls", "image-models"] }
lancedb = { version = "0.26.2", default-features = false }
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"

# Internal crates
cruxe-core = { path = "crates/cruxe-core" }
cruxe-state = { path = "crates/cruxe-state" }
cruxe-indexer = { path = "crates/cruxe-indexer" }
cruxe-query = { path = "crates/cruxe-query" }
cruxe-mcp = { path = "crates/cruxe-mcp" }
cruxe-vcs = { path = "crates/cruxe-vcs" }

[profile.dist]
inherits = "release"
lto = "thin"
