[package]
name = "codecompass"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codecompass"
path = "src/main.rs"

[dependencies]
codecompass-core = { workspace = true }
codecompass-state = { workspace = true }
codecompass-indexer = { workspace = true }
codecompass-query = { workspace = true }
codecompass-mcp = { workspace = true }
codecompass-vcs = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
tantivy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
