[package]
name = "codecompass-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
toml = "0.8"
dirs = "6"
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
