[package]
name = "codecompass-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
codecompass-core = { workspace = true }
codecompass-state = { workspace = true }
codecompass-indexer = { workspace = true }
codecompass-query = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
blake3 = { workspace = true }
