[package]
name = "codecompass-query"
version.workspace = true
edition.workspace = true

[dependencies]
codecompass-core = { workspace = true }
codecompass-indexer = { workspace = true }
codecompass-state = { workspace = true }
codecompass-vcs = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
