[package]
name = "codecompass-state"
version.workspace = true
edition.workspace = true

[dependencies]
codecompass-core = { workspace = true }
rusqlite = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tar = "0.4"
zstd = "0.13"
tempfile = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
