[package]
name = "codecompass-vcs"
version.workspace = true
edition.workspace = true

[dependencies]
codecompass-core = { workspace = true }
codecompass-state = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
