[package]
name = "cruxe-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
cruxe-core = { workspace = true }
cruxe-state = { workspace = true }
cruxe-indexer = { workspace = true }
cruxe-query = { workspace = true }
cruxe-vcs = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
blake3 = { workspace = true }
