[package]
name = "cruxe-vcs"
version.workspace = true
edition.workspace = true

[dependencies]
cruxe-core = { workspace = true }
cruxe-state = { workspace = true }
git2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
